# OmniAGI

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  main.py
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/backend/: cpu.rs  mod.rs
core/src/engine/: config.rs  inference.rs  mod.rs  model.rs
notebooks/: OmniAGI_Colab.ipynb
omniagi/: __init__.py  agi_controller.py
omniagi/agent/: __init__.py  base.py  persona.py  state.py
omniagi/agents/: __init__.py  loop.py  multi_agent.py
omniagi/agi/: __init__.py  true_agi.py
omniagi/api/: __init__.py  external.py
omniagi/asi/: __init__.py  emergence_monitor.py
omniagi/autonomy/: __init__.py  advanced.py  agenda.py  goal_generator.py  motivation.py
omniagi/benchmarks/: __init__.py  advanced_arc.py  arc.py  arc_solver.py  arc_v2.py  neural_symbolic_arc.py  suite.py
omniagi/brain/: __init__.py  unified.py
omniagi/causal/: __init__.py  explainer.py  graph.py  reasoner.py
omniagi/cli/: main.py
omniagi/collective/: __init__.py  emergence.py  hivemind.py
omniagi/consciousness/: __init__.py  emergence.py  engine.py  inner_dialogue.py
omniagi/continual/: __init__.py  consolidator.py  curriculum.py  knowledge_graph.py
omniagi/core/: __init__.py  config.py  engine.py  multi_llm.py  quantizer.py  safe_loader.py
omniagi/creativity/: __init__.py  engine.py
omniagi/daemon/: __init__.py  brain.py  introspection.py  lifecycle.py  scheduler.py  thinking.py
omniagi/embodiment/: __init__.py  actuator.py  sensory.py  sim_env.py  simulation.py
omniagi/extensions/: __init__.py  base.py  developer.py  memory.py  web.py
omniagi/kan/: __init__.py  efficient_kan.py  symbolic_kan.py
omniagi/language/: __init__.py  cloud_llm.py  rwkv_model.py
omniagi/learning/: __init__.py  continual_learner.py  online.py  open_ended.py
omniagi/mcp/: __init__.py  client.py  protocol.py  server.py
omniagi/memory/: __init__.py  episodic.py  persistent.py  rag.py  vector.py  working.py
omniagi/meta/: __init__.py  adapter.py  learner.py  optimizer.py  strategy.py
omniagi/metacognition/: __init__.py  reflection.py
omniagi/multimodal/: __init__.py  audio.py  lightweight.py  vision.py
omniagi/neurosymbolic/: __init__.py  differentiable_reasoning.py  knowledge_graph.py  neural_logic.py
omniagi/ouroboros/: __init__.py  analyzer.py  critic.py  loop.py  refactor.py
omniagi/planning/: hierarchical.py
omniagi/reasoning/: __init__.py  advanced.py  common_sense.py  symbolic_engine.py
omniagi/rsi/: __init__.py  arc_benchmark.py  architect.py  evaluator.py  evolver.py  fine_tune.py
omniagi/safety/: __init__.py  alignment.py  containment.py  ethics.py
omniagi/swarm/: __init__.py  guild.py  shared_brain.py
omniagi/tools/: __init__.py  base.py  code_exec.py  filesystem.py  git.py  web.py
omniagi/training/: __init__.py  arc_finetune.py  finetune.py
omniagi/transfer/: __init__.py  domain_adapter.py  zero_shot.py
omniagi/vision/: __init__.py  computer_vision.py
omniagi/world/: __init__.py  planner.py  simulator.py  state.py
scripts/: demo_agi.py  demo_asi.py  extension_demo.py  final_agi_test.py  run_arc_benchmark.py  setup_rwkv.py  test_agi.py  test_agi_complete.py  test_all_systems.py  test_asi_complete.py  test_safe_agi.py
server/: __init__.py  main.py
tests/: test_config.py
